--- a/public/index.html
+++ b/public/index.html
@@ -49,12 +49,20 @@
 			console.log('ServiceWorker not supported');
 		}
 
+		let promptInstall = null
 		window.addEventListener('beforeinstallprompt', function(event){
 			console.log('before add to home screen');
 			event.preventDefault();
 			promptInstall = event;
 			return false;
 		});
+
+		window.addEventListener('appinstalled', (evt) => {
+		// Log install to analytics
+		console.log('INSTALL: Success', evt);
+		});
+
+		
 	</script>
 </body>
 </html>
