--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<title>Svelte app</title>
+	<title>Svelte Todo app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
@@ -49,19 +49,12 @@
 			console.log('ServiceWorker not supported');
 		}
 
-		// let promptInstall = null
-		window.addEventListener('beforeinstallprompt', function(event){
-			// showInstallPrompt(event)
-			console.log('before add to home screen');
-			event.preventDefault();
-			// promptInstall = event;
-			return false;
-		});
+		// window.addEventListener('beforeinstallprompt', function(event){
+		// 	// console.log('before add to home screen');
+		// 	event.preventDefault();
+		// 	return false;
+		// });
 
-		// window.addEventListener('appinstalled', (evt) => {
-		// // Log install to analytics
-		// console.log('INSTALL: Success', evt);
-		// });	
 	</script>
 </body>
 </html>
